simulate history connections, ready to implement the connection suggestion

--- a/src/main/python/pmage_data_warehouse/history_connections.ipynb
+++ b/src/main/python/pmage_data_warehouse/history_connections.ipynb
@@ -6,38 +6,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "import random\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opening JSON file\n",
+    "f = open('projects.json', 'r')\n",
+    "data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "projects = data['projects']\n",
+    "users = data['users']\n",
+    "apps = data['app']\n",
+    "pms_systems = data['pms']\n",
+    "\n",
+    "def get_users_by_domain(domain):\n",
+    "    return [user for user in users if user['domain'] == domain]\n",
+    "\n",
+    "def get_apps_by_domain(domain):\n",
+    "    return [app for app in apps if domain in app['domain']]\n",
+    "\n",
+    "def create_simulated_interaction(project, app, pms, user, process_instance_id, assigned_tasks):\n",
+    "    return {\n",
+    "        \"timestamp\": datetime.now().isoformat(),\n",
+    "        \"process_instance_id\": process_instance_id,\n",
+    "        \"project_name\": project['name'],\n",
+    "        \"project_domain\": project['domain'],\n",
+    "        \"app_name\": app['name'],\n",
+    "        \"app_location\": app['location'],\n",
+    "        \"pms_name\": pms['name'],\n",
+    "        \"pms_location\": pms['location'],\n",
+    "        \"user_name\": user['name'],\n",
+    "        \"tasks\": assigned_tasks\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulated_data = []\n",
+    "total_connections_needed = 2000\n",
+    "min_connections_per_project = 1\n",
+    "max_connections_per_project = 2\n",
+    "process_instance_id_counter = 1\n",
+    "\n",
+    "connections_counter = 0\n",
+    "stop_signal = False\n",
+    "\n",
+    "used_combinations = set()\n",
+    "\n",
+    "while not stop_signal:\n",
+    "    for project in projects:\n",
+    "        process_instance_id = process_instance_id_counter\n",
+    "        process_instance_id_counter += 1\n",
+    "        rand_nb_connections = random.randint(min_connections_per_project, max_connections_per_project)\n",
+    "\n",
+    "        assigned_tasks = []\n",
+    "        if rand_nb_connections == 2:\n",
+    "            mid_point = random.choice(range(3, len(project[\"task\"])))\n",
+    "            assigned_tasks.append(project[\"task\"][:mid_point])\n",
+    "            assigned_tasks.append(project[\"task\"][mid_point:])\n",
+    "        else:\n",
+    "            assigned_tasks = [project[\"task\"]]\n",
+    "\n",
+    "        for i in range(rand_nb_connections):\n",
+    "            compatible_apps = get_apps_by_domain(project['domain'])\n",
+    "            if not compatible_apps:\n",
+    "                continue\n",
+    "            \n",
+    "            app = random.choice(compatible_apps)\n",
+    "            pms = random.choice(pms_systems)\n",
+    "            available_users = get_users_by_domain(project['domain'])\n",
+    "            \n",
+    "            if not available_users:\n",
+    "                continue\n",
+    "            \n",
+    "            user = random.choice(available_users)\n",
+    "            while (process_instance_id, user['name']) in used_combinations:\n",
+    "                user = random.choice(available_users)\n",
+    "\n",
+    "            interaction = create_simulated_interaction(project, app, pms, user, process_instance_id, assigned_tasks[i])\n",
+    "            simulated_data.append(interaction)\n",
+    "            used_combinations.add((process_instance_id, user['name']))\n",
+    "\n",
+    "            connections_counter += 1\n",
+    "            if connections_counter == total_connections_needed:\n",
+    "                stop_signal = True\n",
+    "                break\n",
+    "        if stop_signal:\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Modify Test-bench Wiring', 'domain': 'Aircraft Manufacturing', 'task': ['Define Component Requirements', 'Define Electrical Specification', 'Outline Instrumentation Model', 'Purchase Components', 'Specify Electrical Specification', 'Define Instrumentation Model', 'Install Components', 'Define Specific ICD', 'Define Bench Specification', 'Define Bench Configuration', 'Wire Components', 'Validate Bench Configuration']}\n",
-      "{'name': 'Implement E-commerce Web Application', 'domain': 'Software Engineering', 'task': ['Initialize Repository', 'Create Views Module', 'Create Controllers Module', 'Connect Database', 'Merge Branches for Final Product', 'Deploy Web Application']}\n",
-      "{'name': 'Certification for Self-driving Car Brake', 'domain': 'Car Engineering', 'task': ['Design brake system blueprint', 'Implement Remote Sensing Devices braking activation', 'Connect Remote Sensing Devices with brake control system', 'Assemble the system into a prototype vehicle', 'Assemble the system into the final version']}\n",
-      "{'name': 'Resign Procedure', 'domain': 'Resources Management', 'task': ['Manager submits a staff member resignation form to HR', 'HR assigns form to Accounts Management (AM) team requesting user access deletion', 'AM team validates user account details', 'AM team removes user from assigned groups in directory', 'AM team removes user account from enterprise directory', \"AM team removes user from cloud provider's IAM service\", 'AM team verifies if the user has SSH keys access to cloud resources', \"AM team deletes the user's SSH key pairs\"]}\n",
-      "{'name': 'Item Ordering Process', 'domain': 'Retailing Procedure', 'task': ['Receive Item Order Request', 'Process Item Order', 'Ship Item Order', 'Send Invoice', 'Make Payment via Paypal', 'Paypal Payment Accepted', 'Close Order']}\n",
-      "{'name': 'Apply for Schengen Visa', 'domain': 'Immigration and Citizenship Services', 'task': ['Check if You Need a Schengen Visa', 'Find Out Where to Submit Your Application', 'Schedule an Appointment', 'Fill Out the Schengen Visa Application Form', 'Gather the Required Documents', 'Attend the Visa Interview', 'Pay the Visa Fee', 'Wait for an Answer']}\n"
+      "Simulated data created with 2000 interactions.\n"
      ]
     }
    ],
    "source": [
-    "# Opening JSON file\n",
-    "f = open('projects.json')\n",
-    "data = json.load(f)\n",
+    "# Save simulated data to a JSON file\n",
+    "with open('simulated_connections.json', 'w') as outfile:\n",
+    "    json.dump(simulated_data, outfile, indent=4)\n",
     "\n",
-    "for i in data['projects']:\n",
-    "    print(i)\n",
-    "\n",
-    "# Closing file\n",
-    "f.close()\n"
+    "print(f\"Simulated data created with {len(simulated_data)} interactions.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
