developing experiment scenarios

--- a/src/main/python/pmage_data_warehouse/connection_suggestion.ipynb
+++ b/src/main/python/pmage_data_warehouse/connection_suggestion.ipynb
@@ -163,16 +163,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = data[:100]"
+    "new_data = data[:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'timestamp': '2024-08-03T09:29:58.635053',\n",
+       " 'process_instance_id': 275,\n",
+       " 'project_name': 'Implement E-commerce Web Application',\n",
+       " 'project_domain': 'Software Engineering',\n",
+       " 'app_name': 'GitHub',\n",
+       " 'app_location': 'https://github.com/[Username]/[Project]',\n",
+       " 'pms_name': 'jBPM',\n",
+       " 'pms_location': 'http://localhost:8080/kie-server/services/rest',\n",
+       " 'user_name': 'Alhaitham',\n",
+       " 'tasks': ['Create Controllers Module',\n",
+       "  'Connect Database',\n",
+       "  'Merge Branches for Final Product',\n",
+       "  'Deploy Web Application']}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data[400]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,27 +213,27 @@
     "    common_terms_tfidf = extract_common_terms_tfidf(connection[\"representatives\"])\n",
     "    common_terms = []\n",
     "    for term in common_terms_tfidf:\n",
-    "        common_terms.append(term[0])\n",
-    "\n",
+    "        common_terms.append(term[0]) \n",
+    " \n",
     "    connection[\"representatives\"] = collect_related_words(common_terms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulated data created with 100 interactions.\n"
+      "Simulated data created with 500 interactions.\n"
      ]
     }
    ],
    "source": [
     "# Save data with representative words to a JSON file\n",
-    "with open('./pmage_data_warehouse/simulated_projects/embedded_connections.json', 'w') as outfile:\n",
+    "with open('./pmage_data_warehouse/simulated_projects/embedded_connections2.json', 'w') as outfile:\n",
     "    json.dump(new_data, outfile, indent=4)\n",
     "\n",
     "print(f\"Simulated data created with {len(new_data)} interactions.\")"
