--- a/src/main/python/pmage_data_warehouse/history_connections.ipynb
+++ b/src/main/python/pmage_data_warehouse/history_connections.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('projects.json', 'r')\n",
+    "f = open('./simulated_projects/projects.json', 'r')\n",
     "data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "\n",
     "        assigned_tasks = []\n",
     "        if rand_nb_connections == 2:\n",
-    "            mid_point = random.choice(range(3, len(project[\"task\"])))\n",
+    "            mid_point = random.choice(range(2, len(project[\"task\"]) - 1))\n",
     "            assigned_tasks.append(project[\"task\"][:mid_point])\n",
     "            assigned_tasks.append(project[\"task\"][mid_point:])\n",
     "        else:\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
    ],
    "source": [
     "# Save simulated data to a JSON file\n",
-    "with open('simulated_connections.json', 'w') as outfile:\n",
+    "with open('./simulated_projects/simulated_connections.json', 'w') as outfile:\n",
     "    json.dump(simulated_data, outfile, indent=4)\n",
     "\n",
     "print(f\"Simulated data created with {len(simulated_data)} interactions.\")"
