--- a/src/main/python/case_study/brake_certification/model_fine_tune copy.ipynb
+++ b/src/main/python/case_study/brake_certification/model_fine_tune copy.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch_directml"
+    "# import torch_directml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,35 +21,36 @@
      "text": [
       "/home/happygaming/miniconda3/envs/dl/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2024-08-03 07:40:07.656640: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-08-02 01:47:31.949026: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-08-03 07:40:09.528742: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libdirectml.d6f03b303ac3c4f2eeb8ca631688c9757b361310.so\n",
-      "2024-08-03 07:40:09.528831: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libdxcore.so\n",
-      "2024-08-03 07:40:09.534320: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libd3d12.so\n",
-      "2024-08-03 07:40:09.735102: I tensorflow/c/logging.cc:34] DirectML device enumeration: found 1 compatible adapters.\n"
+      "2024-08-02 01:47:33.828087: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libdirectml.d6f03b303ac3c4f2eeb8ca631688c9757b361310.so\n",
+      "2024-08-02 01:47:33.828163: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libdxcore.so\n",
+      "2024-08-02 01:47:33.843459: I tensorflow/c/logging.cc:34] Successfully opened dynamic library libd3d12.so\n",
+      "2024-08-02 01:47:35.257348: I tensorflow/c/logging.cc:34] DirectML device enumeration: found 1 compatible adapters.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from datasets import load_dataset\n",
-    "from transformers import BartTokenizer, BartForConditionalGeneration, Trainer, TrainingArguments"
+    "from transformers import BartTokenizer, BartForConditionalGeneration, Trainer, TrainingArguments, DataCollatorForSeq2Seq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'torch_directml' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Activate DirectML for Windows Subsystem Linux\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dml \u001b[38;5;241m=\u001b[39m \u001b[43mtorch_directml\u001b[49m\u001b[38;5;241m.\u001b[39mdevice()\n\u001b[1;32m      3\u001b[0m tensor1 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mto(dml) \u001b[38;5;66;03m# Note that dml is a variable, not a string!\u001b[39;00m\n\u001b[1;32m      4\u001b[0m tensor2 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m2\u001b[39m])\u001b[38;5;241m.\u001b[39mto(dml)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch_directml' is not defined"
+     ]
     }
    ],
    "source": [
@@ -75,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Load dataset\n",
-    "dataset = load_dataset('csv', data_files='./large_vocab_refined.txt')"
+    "dataset = load_dataset('csv', data_files='./domain_vocab/large_vocab_refined.txt')"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,25 +162,34 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_test_split = tokenized_dataset['train'].train_test_split(test_size=0.1)\n",
+    "train_dataset = train_test_split['train']\n",
+    "validation_dataset = train_test_split['test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['input_ids', 'attention_mask', 'labels'],\n",
-       "        num_rows: 8563\n",
-       "    })\n",
+       "Dataset({\n",
+       "    features: ['input_ids', 'attention_mask', 'labels'],\n",
+       "    num_rows: 857\n",
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokenized_dataset"
+    "validation_dataset"
    ]
   },
   {
@@ -192,20 +202,27 @@
     "training_args = TrainingArguments(\n",
     "    output_dir='./results',\n",
     "    evaluation_strategy=\"epoch\",\n",
-    "    learning_rate=0.001,\n",
+    "    learning_rate=0.01,\n",
     "    per_device_train_batch_size=2,\n",
     "    per_device_eval_batch_size=2,\n",
+    "    gradient_accumulation_steps=8,\n",
+    "    warmup_steps=500,\n",
     "    num_train_epochs=3,\n",
     "    weight_decay=0.01,\n",
     "    save_total_limit=2,\n",
+    "    logging_dir='./logs',\n",
+    "    logging_steps=10,\n",
     ")\n",
+    "\n",
+    "data_collator = DataCollatorForSeq2Seq(tokenizer, model=model)\n",
     "\n",
     "# Initialize Trainer\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
-    "    train_dataset=tokenized_dataset['train'],\n",
-    "    eval_dataset=tokenized_dataset['train'],\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=validation_dataset,\n",
+    "    data_collator=data_collator,\n",
     ")"
    ]
   },
@@ -221,42 +238,14 @@
       "/home/happygaming/miniconda3/envs/dl/lib/python3.10/site-packages/transformers/optimization.py:306: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "***** Running training *****\n",
-      "  Num examples = 8563\n",
+      "  Num examples = 7706\n",
       "  Num Epochs = 3\n",
       "  Instantaneous batch size per device = 2\n",
-      "  Total train batch size (w. parallel, distributed & accumulation) = 2\n",
-      "  Gradient Accumulation steps = 1\n",
-      "  Total optimization steps = 12846\n",
+      "  Total train batch size (w. parallel, distributed & accumulation) = 16\n",
+      "  Gradient Accumulation steps = 8\n",
+      "  Total optimization steps = 1443\n",
       "  Number of trainable parameters = 406291456\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2' max='12846' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [    2/12846 : < :, Epoch 0.00/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "ename": "",
@@ -469,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,17 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test the system.Assemble\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "summary = summarize_phrase(ft_model, input_phrase, 10, 10)\n",
     "print(summary)"
@@ -546,29 +534,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tasks = [\"Design brake system blueprint\", \n",
-    "         \"Implement Remote Sensing Devices braking activation\", \n",
-    "         \"Connect Remote Sensing Devices with brake control system\", \n",
-    "         \"Assemble the system into a prototype vehicle\", \n",
-    "         \"Assemble the system into the final version\"]"
+    "tasks = [\"Design brake system blueprint\", \"Implement Remote Sensing Devices braking activation\", \"Connect Remote Sensing Devices with brake control system\", \"Assemble the system into a prototype vehicle\", \"Assemble the system into the final version\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "brakeke_system_design\n",
-      "brakebrake_activation\n",
-      "brakebrake_Vehicle\n",
+      "brakeke system design\n",
+      "brakebrake activation\n",
+      "brakebrake Vehicle\n",
       "autom/brake\n",
       "technician.Assemble\n"
      ]
@@ -577,7 +561,6 @@
    "source": [
     "for task in tasks:\n",
     "    summary = summarize_phrase(ft_model, task, 10, 10)\n",
-    "    summary = summary.replace(\" \", \"_\")\n",
     "    print(summary)"
    ]
   },
