--- a/src/main/python/pmage_data_warehouse/test_suggestion.ipynb
+++ b/src/main/python/pmage_data_warehouse/test_suggestion.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "\n",
     "    # calculate similarity between history connections and the new project name\n",
     "    for connection in hist_connections:\n",
-    "        similarity = tfidf_cosine_similarity(new_project_tokens, connection[\"representatives\"])\n",
+    "        similarity = jaccard_similarity(new_project_tokens, connection[\"representatives\"])\n",
     "        similarity_ranking.append((connection[\"process_instance_id\"], similarity))\n",
     "        connection_ranking[connection[\"process_instance_id\"]] = connection\n",
     "\n",
@@ -106,11 +106,16 @@
     "                and selected_connections[i][\"pms_name\"] == filtered_candidate[\"pms_name\"]:\n",
     "                    duplicate = True\n",
     "                    break\n",
-    "        if not duplicate:\n",
+    "        if not duplicate and temporary_ranking[i][1] > 0.01:\n",
     "            final_connections.append(selected_connections[i])\n",
     "            final_ranking.append(temporary_ranking[i])\n",
     "    \n",
-    "    print(final_connections)\n",
+    "    # print(final_connections)\n",
+    "\n",
+    "    # if there is no suitable candidate, print errors\n",
+    "    if len(final_connections) == 0:\n",
+    "        print(\"Sorry, we cannot find an appropriate connection suggestion for your project. Please fill in the required information manually\")\n",
+    "        return None, None\n",
     "\n",
     "    # if there is user's old configuration in the top five related\n",
     "    # take it\n",
@@ -119,13 +124,32 @@
     "        if username in final_connections[i][\"user_name\"] :\n",
     "            return final_connections[i], final_ranking[i]\n",
     "\n",
-    "    return final_connections, final_ranking\n",
+    "    return final_connections[0], final_ranking[0]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_important_configs(connections_config, connection_priority_score):\n",
+    "        if connections_config == None:\n",
+    "            print(\"No recommended config\")\n",
+    "            return \n",
+    "        extract_info = dict()\n",
+    "        extract_info[\"project_name\"] = connections_config[\"project_name\"]\n",
+    "        extract_info[\"app_name\"] = connections_config[\"app_name\"]\n",
+    "        extract_info[\"app_location\"] = connections_config[\"app_location\"]\n",
+    "        extract_info[\"pms_name\"] = connections_config[\"pms_name\"]\n",
+    "        extract_info[\"pms_location\"] = connections_config[\"pms_location\"]\n",
+    "        print(extract_info, connection_priority_score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,89 +178,80 @@
      "text": [
       "[{'timestamp': '2024-08-03T09:29:58.632285', 'process_instance_id': 3, 'project_name': 'Manufacture self-driving Car Brake', 'project_domain': 'Car Engineering', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest', 'user_name': 'Charlotte', 'tasks': ['Assemble the system into a prototype vehicle', 'Assemble the system into the final version'], 'representatives': ['manufactured', 'manufacturer', 'finals', 'components', 'pre-production', 'driver', 'vehicle', 'next', 'model', 'versions', 'assembling', 'prototypes', 'wheel', 'cars', 'assembled', 'manufacture', 'driving', 'design', 'suv', 'brake', 'assemble', 'round', 'edition', 'braking', 'original', 'match', 'manufactures', 'gather', 'pedal', 'second', 'prototype', 'introduced', 'assembles', 'manufacturing', 'designs', 'truck', 'brakes', 'vehicles', 'final', 'version', 'featured', 'reassemble', 'hydraulic', 'car']}, {'timestamp': '2024-08-03T09:29:58.632597', 'process_instance_id': 31, 'project_name': 'Manufacture self-driving Car Brake', 'project_domain': 'Car Engineering', 'app_name': 'AutoCAD', 'app_location': 'C:\\\\Users\\\\[Username]\\\\AppData\\\\Local\\\\Autodesk\\\\AutoCAD [Version]\\\\', 'pms_name': 'BAPE', 'pms_location': 'http://localhost:8081/api/process-instance', 'user_name': 'Charlotte', 'tasks': ['Assemble the system into a prototype vehicle', 'Assemble the system into the final version'], 'representatives': ['manufactured', 'manufacturer', 'finals', 'components', 'pre-production', 'driver', 'vehicle', 'next', 'model', 'versions', 'assembling', 'prototypes', 'wheel', 'cars', 'assembled', 'manufacture', 'driving', 'design', 'suv', 'brake', 'assemble', 'round', 'edition', 'braking', 'original', 'match', 'manufactures', 'gather', 'pedal', 'second', 'prototype', 'introduced', 'assembles', 'manufacturing', 'designs', 'truck', 'brakes', 'vehicles', 'final', 'version', 'featured', 'reassemble', 'hydraulic', 'car']}, {'timestamp': '2024-08-03T09:29:58.632857', 'process_instance_id': 73, 'project_name': 'Manufacture self-driving Car Brake', 'project_domain': 'Car Engineering', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'BAPE', 'pms_location': 'http://localhost:8081/api/process-instance', 'user_name': 'Furina de Fontaine', 'tasks': ['Assemble the system into a prototype vehicle', 'Assemble the system into the final version'], 'representatives': ['manufactured', 'manufacturer', 'finals', 'components', 'pre-production', 'driver', 'vehicle', 'next', 'model', 'versions', 'assembling', 'prototypes', 'wheel', 'cars', 'assembled', 'manufacture', 'driving', 'design', 'suv', 'brake', 'assemble', 'round', 'edition', 'braking', 'original', 'match', 'manufactures', 'gather', 'pedal', 'second', 'prototype', 'introduced', 'assembles', 'manufacturing', 'designs', 'truck', 'brakes', 'vehicles', 'final', 'version', 'featured', 'reassemble', 'hydraulic', 'car']}, {'timestamp': '2024-08-03T09:29:58.634192', 'process_instance_id': 171, 'project_name': 'Manufacture self-driving Car Brake', 'project_domain': 'Car Engineering', 'app_name': 'GitHub', 'app_location': 'https://github.com/[Username]/[Project]', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest', 'user_name': 'Furina de Fontaine', 'tasks': ['Assemble the system into a prototype vehicle', 'Assemble the system into the final version'], 'representatives': ['manufactured', 'manufacturer', 'finals', 'components', 'pre-production', 'driver', 'vehicle', 'next', 'model', 'versions', 'assembling', 'prototypes', 'wheel', 'cars', 'assembled', 'manufacture', 'driving', 'design', 'suv', 'brake', 'assemble', 'round', 'edition', 'braking', 'original', 'match', 'manufactures', 'gather', 'pedal', 'second', 'prototype', 'introduced', 'assembles', 'manufacturing', 'designs', 'truck', 'brakes', 'vehicles', 'final', 'version', 'featured', 'reassemble', 'hydraulic', 'car']}, {'timestamp': '2024-08-03T09:29:58.634350', 'process_instance_id': 192, 'project_name': 'Manufacture self-driving Car Brake', 'project_domain': 'Car Engineering', 'app_name': 'AutoCAD', 'app_location': 'C:\\\\Users\\\\[Username]\\\\AppData\\\\Local\\\\Autodesk\\\\AutoCAD [Version]\\\\', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest', 'user_name': 'Furina de Fontaine', 'tasks': ['Assemble the system into a prototype vehicle', 'Assemble the system into the final version'], 'representatives': ['manufactured', 'manufacturer', 'finals', 'components', 'pre-production', 'driver', 'vehicle', 'next', 'model', 'versions', 'assembling', 'prototypes', 'wheel', 'cars', 'assembled', 'manufacture', 'driving', 'design', 'suv', 'brake', 'assemble', 'round', 'edition', 'braking', 'original', 'match', 'manufactures', 'gather', 'pedal', 'second', 'prototype', 'introduced', 'assembles', 'manufacturing', 'designs', 'truck', 'brakes', 'vehicles', 'final', 'version', 'featured', 'reassemble', 'hydraulic', 'car']}]\n"
      ]
-    }
-   ],
-   "source": [
-    "suggested_config = suggest_configuration(new_project_name, username, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "{'timestamp': '2024-08-03T09:29:58.632857',\n",
-       " 'process_instance_id': 73,\n",
-       " 'project_name': 'Manufacture self-driving Car Brake',\n",
-       " 'project_domain': 'Car Engineering',\n",
-       " 'app_name': 'SIMATIC WinCC V8',\n",
-       " 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose',\n",
-       " 'pms_name': 'BAPE',\n",
-       " 'pms_location': 'http://localhost:8081/api/process-instance',\n",
-       " 'user_name': 'Furina de Fontaine',\n",
-       " 'tasks': ['Assemble the system into a prototype vehicle',\n",
-       "  'Assemble the system into the final version'],\n",
-       " 'representatives': ['manufactured',\n",
-       "  'manufacturer',\n",
-       "  'finals',\n",
-       "  'components',\n",
-       "  'pre-production',\n",
-       "  'driver',\n",
-       "  'vehicle',\n",
-       "  'next',\n",
-       "  'model',\n",
-       "  'versions',\n",
-       "  'assembling',\n",
-       "  'prototypes',\n",
-       "  'wheel',\n",
-       "  'cars',\n",
-       "  'assembled',\n",
-       "  'manufacture',\n",
-       "  'driving',\n",
-       "  'design',\n",
-       "  'suv',\n",
-       "  'brake',\n",
-       "  'assemble',\n",
-       "  'round',\n",
-       "  'edition',\n",
-       "  'braking',\n",
-       "  'original',\n",
-       "  'match',\n",
-       "  'manufactures',\n",
-       "  'gather',\n",
-       "  'pedal',\n",
-       "  'second',\n",
-       "  'prototype',\n",
-       "  'introduced',\n",
-       "  'assembles',\n",
-       "  'manufacturing',\n",
-       "  'designs',\n",
-       "  'truck',\n",
-       "  'brakes',\n",
-       "  'vehicles',\n",
-       "  'final',\n",
-       "  'version',\n",
-       "  'featured',\n",
-       "  'reassemble',\n",
-       "  'hydraulic',\n",
-       "  'car']}"
+       "({'timestamp': '2024-08-03T09:29:58.632857',\n",
+       "  'process_instance_id': 73,\n",
+       "  'project_name': 'Manufacture self-driving Car Brake',\n",
+       "  'project_domain': 'Car Engineering',\n",
+       "  'app_name': 'SIMATIC WinCC V8',\n",
+       "  'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose',\n",
+       "  'pms_name': 'BAPE',\n",
+       "  'pms_location': 'http://localhost:8081/api/process-instance',\n",
+       "  'user_name': 'Furina de Fontaine',\n",
+       "  'tasks': ['Assemble the system into a prototype vehicle',\n",
+       "   'Assemble the system into the final version'],\n",
+       "  'representatives': ['manufactured',\n",
+       "   'manufacturer',\n",
+       "   'finals',\n",
+       "   'components',\n",
+       "   'pre-production',\n",
+       "   'driver',\n",
+       "   'vehicle',\n",
+       "   'next',\n",
+       "   'model',\n",
+       "   'versions',\n",
+       "   'assembling',\n",
+       "   'prototypes',\n",
+       "   'wheel',\n",
+       "   'cars',\n",
+       "   'assembled',\n",
+       "   'manufacture',\n",
+       "   'driving',\n",
+       "   'design',\n",
+       "   'suv',\n",
+       "   'brake',\n",
+       "   'assemble',\n",
+       "   'round',\n",
+       "   'edition',\n",
+       "   'braking',\n",
+       "   'original',\n",
+       "   'match',\n",
+       "   'manufactures',\n",
+       "   'gather',\n",
+       "   'pedal',\n",
+       "   'second',\n",
+       "   'prototype',\n",
+       "   'introduced',\n",
+       "   'assembles',\n",
+       "   'manufacturing',\n",
+       "   'designs',\n",
+       "   'truck',\n",
+       "   'brakes',\n",
+       "   'vehicles',\n",
+       "   'final',\n",
+       "   'version',\n",
+       "   'featured',\n",
+       "   'reassemble',\n",
+       "   'hydraulic',\n",
+       "   'car']},\n",
+       " (73, 0.06816716445879505))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "suggested_config"
+    "suggest_configuration(new_project_name, username, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -541,13 +556,49 @@
        "  (192, 0.14506145521645303)])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "suggest_configuration(new_project_name, username, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_project_name = [\"Manufacture brake system for self-driving car\", \"Brake system for new electric Peugeot\", \"Develop Anti-cheat system for FPS games\", \"Manufacture brake system for self-driving car\", \"Brake system for new electric Peugeot\", \"Develop Anti-cheat system for FPS games\"]\n",
+    "username = [\"Charlotte\", \"Furina\", \"Charlotte\", \"Louise\", \"Thomas\", \"Antoine\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'project_name': 'Manufacture self-driving Car Brake', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest'} 0.06666666666666667\n",
+      "{'project_name': 'Certify Car Brake', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest'} 0.025\n",
+      "Sorry, we cannot find an appropriate connection suggestion for your project. Please fill in the required information manually\n",
+      "No recommended config\n",
+      "{'project_name': 'Manufacture self-driving Car Brake', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest'} 0.06666666666666667\n",
+      "{'project_name': 'Certify Car Brake', 'app_name': 'SIMATIC WinCC V8', 'app_location': 'C:\\\\Program Files(x86)\\\\Siemens\\\\WinCC\\\\Diagnose', 'pms_name': 'jBPM', 'pms_location': 'http://localhost:8080/kie-server/services/rest'} 0.025\n",
+      "Sorry, we cannot find an appropriate connection suggestion for your project. Please fill in the required information manually\n",
+      "No recommended config\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(new_project_name)):\n",
+    "    suggest_config, suggest_config_score = suggest_configuration(new_project_name[i], username[i], data)\n",
+    "    extract_important_configs(suggest_config, suggest_config_score)"
    ]
   },
   {
@@ -574,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
